--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </nav>
 
 <!-- Hero Section -->
-<section class="hero pt-3" id="about">
+<section class="hero pt-3 bg-light" id="about">
     <div class="container">
         <div class="row justify-content-around">
             <div class="col">
@@ -53,44 +53,24 @@
                 <div class="bio animate__animated animate__shakeX">
                     <h2 class="bio-title fw-bold">About Me</h2>
                     <p class="bio-text">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-                      dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-                      inventore tempore minus nemo, iste ullam illo laboriosam maiores
-                      repudiandae quos!
+                      Hi i'm Ranjeethkumar 
+                      a Full Stack Developer.</br>
+                      I'm a organized and dependable candidate successful at managing multiple priorities with a positive attitude. Willingness to take on added responsibilities to meet team goals.
                     </p>
+                    <a href="https://drive.google.com/file/d/1kQsHQv2gSP-40XuxZyOEuUDppZRz2XAc/view?usp=sharing" target="_blank" class="btn btn-info fw-bold fs-5">Download CV
+                    </a>
                 </div>
             </div>
         </div>   
     </div>
 </section>
 
-<!-- More about -->
-<section class="more-about">
-  <div class="container mt-5">
-    <h2 class="text-center fw-bold">More About Me</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-      nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-      autem deleniti cupiditate molestias quis unde quae totam porro dicta
-      iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-      nostrum dolor minus, libero delectus praesentium perferendis
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-      consequuntur labore? Ea totam voluptas amet!
-    </p>
-  </div>
-</section>
-
 <!-- Skills section -->
-<section class="skills my-5 p-3" id="skills">
+<section class="skills my-5 p-3 " id="skills">
   <h2 class="skill-header text-center fw-bold m-3">My Top Skills</h2>
   <div class="container skills-wrapper">
-    <div class="row">
-    <div class="col first-set animate__animated animate__pulse d-flex justify-content-center">
+    <div class="row d-flex justify-content-center">
+    <div class="col-lg-6 flex-wrap first-set animate__animated animate__pulse d-flex justify-content-center">
       <div class="icon icon-card card p-2 m-2" style="width: 8rem;">
         <img src="./Icons/icons8-html-5.svg" class="card-img-top" alt="..." width="100px" height="100px">
         <p class="text-center shadow p-2 bg-body rounded rounded-pill bg-info">HTML</p>
@@ -106,11 +86,7 @@
       <div class="icon icon-card card p-2 m-2" style="width: 8rem;">
         <img src="./Icons/icons8-bootstrap.svg" class="card-img-top" alt="..." width="100px" height="100px">
         <p class="text-center shadow p-2 bg-body rounded rounded-pill">Bootstrap</p>
-      </div>      
-    </div>
-    </div>
-    <div class="row">
-    <div class="col second-set animate__animated animate__pulse d-flex justify-content-center">
+      </div>       
       <div class="icon icon-card card p-2 m-2" style="width: 8rem;">
         <img src="./Icons/icons8-nodejs.svg" class="card-img-top" alt="..." width="100px" height="100px">
         <p class="text-center shadow p-2 bg-body rounded rounded-pill">NodeJS</p>
@@ -127,9 +103,6 @@
         <img src="./Icons/icons8-mongodb-a-cross-platform-document-oriented-database-program-96.png" class="card-img-top" alt="..." width="100px" height="100px">
         <p class="text-center shadow p-2 bg-body rounded rounded-pill">MongoDB</p>
       </div>
-      </div>
-      <div class="row">
-      <div class="col third-set animate__animated animate__pulse d-flex justify-content-center">
         <div class="icon icon-card card p-2 m-2" style="width: 8rem;">
           <img src="./Icons/icons8-react-native.svg" class="card-img-top" alt="..." width="100px" height="100px">
           <p class="text-center shadow p-2 bg-body rounded rounded-pill">React</p>
@@ -141,45 +114,138 @@
         <div class="icon icon-card card p-2 m-2" style="width: 8rem;">
           <img src="./Icons/icons8-hierarchy-96.png" class="card-img-top" alt="..." width="100px" height="100px">
           <p class="text-center shadow p-2 bg-body rounded rounded-pill">DS & Algo</p>
-        </div>
-      </div>
-      </div>      
-    </div>
+        </div> 
+        </div>  
+      </div>  
   </div>
 </section>
 
 <!-- Projects section -->
-<section class="projects my-5 p-3" id="projects">
-  <h2 class="projects-title text-center fw-bold m-3">Some of my Recent Projects</h2>
+<section class="projects my-5 p-3 bg-light" id="projects">
+  <h2 class="projects-title text-center fw-bold m-3">Some of My Recent Projects</h2>
   <div class="projects-container d-flex justify-content-center d-flex flex-wrap">
-    <div class="card project-card text-center" style="width: 18rem;">
-      <img src="./Images/open brewery.png" class="project-pic card-img-top" alt="...">
+    <div class="card project-card text-center" style="width: 30rem;">
+      <img src="./Images/Foodapp.png" class="project-pic card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title fw-bold">Open Brewery API</h5>
-        <p class="card-text">This is my first Hackathon project. It shows the details of brewery's using API. In that all the elements were dynamically created in JavaScript and i used API call by async/await and fetch methods.</p>
+        <h5 class="card-title fw-bold">Food Ordering App</h5>
+        <div class="card-text">
+          <table class="table">
+            <tbody>
+              <tr>
+                <th scope="row">Database</th>
+                <td>MongoDB</td>
+              </tr>
+              <tr>
+                <th scope="row">Server-side framework</th>
+                <td>Express.js</td>
+              </tr>
+              <tr>
+                <th scope="row">Client-side framework</th>
+                <td>React</td>
+              </tr>
+              <tr>
+                <th scope="row">Javascript Runtime</th>
+                <td>Node.js</td>
+              </tr>
+              <tr>
+                <th scope="row">Auth</th>
+                <td>JWT</td>
+              </tr>
+              <tr>
+                <th scope="row">user ID</th>
+                <td>user@gmail.com /</br> admin@gmail.com</td>
+              </tr>
+              <tr>
+                <th scope="row">password</th>
+                <td>User@123 /</br> Admin@123</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
         <a href="
-        https://musing-meitner-5f20cd.netlify.app" target="_blank" class="btn btn-info fw-bold">Check it out</a>
+        https://foodapp-mern.netlify.app" target="_blank" class="btn btn-info fw-bold">Live Demo</a>
+        <a href="
+        https://github.com/rmpranjeeth/foodapp-mern" target="_blank" class="btn btn-info fw-bold ms-3">Github Code</a>
       </div>
     </div>
-    <div class="card project-card text-center" style="width: 18rem;">
-      <img src="./Images/Responsive Web design.png" class="project-pic card-img-top" alt="...">
+    <div class="card project-card text-center" style="width: 30rem;">
+      <img src="./Images/ZendeskApp.png" class="project-pic card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title fw-bold">Responsive Web Page Design</h5>
-        <p class="card-text">In this project i used Bootstrap to make this webpage more responsive for all devices</p>
+        <h5 class="card-title fw-bold">ZenDesk Query Ticketing App</h5>
+        <div class="card-text">
+          <table class="table">
+            <tbody>
+              <tr>
+                <th scope="row">Database</th>
+                <td>MongoDB</td>
+              </tr>
+              <tr>
+                <th scope="row">Server-side framework</th>
+                <td>Express.js</td>
+              </tr>
+              <tr>
+                <th scope="row">Client-side framework</th>
+                <td>React</td>
+              </tr>
+              <tr>
+                <th scope="row">Javascript Runtime</th>
+                <td>Node.js</td>
+              </tr>
+              <tr>
+                <th scope="row">Auth</th>
+                <td>JWT</td>
+              </tr>
+              <tr>
+                <th scope="row">user ID</th>
+                <td>user@gmail.com /</br> admin@gmail.com</td>
+              </tr>
+              <tr>
+                <th scope="row">password</th>
+                <td>User@123 /</br> Admin@123</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
         <a href="
-        https://thirsty-shaw-86e278.netlify.app" target="_blank" class="btn btn-info fw-bold">Check it out</a>
+        https://zendesk-mern.netlify.app" target="_blank" class="btn btn-info fw-bold">Live Demo</a>
+        <a href="
+        https://github.com/rmpranjeeth/ZenDesk-App-MERN" target="_blank" class="btn btn-info fw-bold ms-3">Github Code</a>
       </div>
     </div>
-    <div class="card project-card text-center" style="width: 18rem;">
-      <img src="./Images/FB page design.png" class="project-pic card-img-top" alt="...">
+    <div class="card project-card text-center" style="width: 30rem;">
+      <img src="./Images/QuizApp.png" class="project-pic card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title fw-bold">Facebook Page Recreation</h5>
-        <p class="card-text">In this project i recreated Facebook web page using Bootstrap to make this webpage more responsive for all devices</p>
+        <h5 class="card-title fw-bold">Quiz App</h5>
+        <div class="card-text">
+          <table class="table">
+            <tbody>
+              <tr>
+                <th scope="row">Database</th>
+                <td>MongoDB</td>
+              </tr>
+              <tr>
+                <th scope="row">Server-side framework</th>
+                <td>Express.js</td>
+              </tr>
+              <tr>
+                <th scope="row">Client-side framework</th>
+                <td>React</td>
+              </tr>
+              <tr>
+                <th scope="row">Javascript Runtime</th>
+                <td>Node.js</td>
+              </tr>
+              <tr>
+            </tbody>
+          </table>
+        </div>
         <a href="
-        https://kind-liskov-9d8fc5.netlify.app" target="_blank" class="btn btn-info fw-bold">Check it out</a>
+        https://quizapp-mernstack.netlify.app" target="_blank" class="btn btn-info fw-bold">Live Demo</a>
+        <a href="
+        https://github.com/rmpranjeeth/QuizApp-MERN" target="_blank" class="btn btn-info fw-bold ms-3">Github Code</a>
       </div>
     </div>
-    <div class="card project-card text-center" style="width: 18rem;">
+    <div class="card project-card text-center" style="width: 30rem;">
       <img src="./Images/Rest countries & Weather using API.png" class="project-pic card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title fw-bold">Weather info for Rest countries using API</h5>
@@ -192,7 +258,7 @@
 </section>
 
 <!-- Contact section -->
-<section class="contact" id="contact">
+<section class="contact p-5" id="contact">
   <h2 class="fw-bold">Get In Touch With Me</h2>
   <div class="contact-form-container">
     <div class="contact-form">
@@ -244,23 +310,7 @@
 
 <!-- Social accounts - Fixed to the right -->
 <div class="socials">
-  <a href="#" target="_blank"
-    ><img
-      src="./GIF/icons8-twitter.gif"
-      alt="Twitter"
-      loading="lazy"
-      class="socicon"
-    />
-  </a>
-  <a href="#" target="_blank"
-    ><img
-      src="./GIF/icons8-instagram.gif"
-      alt="Instagram"
-      loading="lazy"
-      class="socicon"
-    />
-  </a>
-  <a href="#" target="_blank"
+  <a href="https://www.linkedin.com/in/ranjeethkumar-p-625194a2" target="_blank"
     ><img
       src="./GIF/icons8-linkedin-2.gif"
       alt="Linkedin"
@@ -268,7 +318,7 @@
       class="socicon"
     />
   </a>
-  <a href="#" target="_blank"
+  <a href="https://github.com/rmpranjeeth" target="_blank"
     ><img src="./GIF/icons8-github.gif" alt="Github" class="socicon"
     />
   </a> 
@@ -284,7 +334,6 @@
 
 <!-- Footer section -->
 <footer>
-  <p class="copy">&copy; Copyright 2021</p>
   <p class="copy">
     Built with &#x2661; by
     <a href="https://twitter.com/koladechris" target="_blank"
