--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </nav>
 
 <!-- Hero Section -->
-<section class="hero pt-3 bg-light" id="about">
+<section class="hero pt-3" id="about">
     <div class="container">
         <div class="row justify-content-around">
             <div class="col">
@@ -163,9 +163,9 @@
           </table>
         </div>
         <a href="
-        https://foodapp-mern.netlify.app" target="_blank" class="btn btn-info fw-bold">Live Demo</a>
+        https://foodapp-mern.netlify.app" target="_blank" class="btn btn-info fw-bold">Live Demo <img src="https://img.icons8.com/material-outlined/24/null/youtube-live.png"/></a>
         <a href="
-        https://github.com/rmpranjeeth/foodapp-mern" target="_blank" class="btn btn-info fw-bold ms-3">Github Code</a>
+        https://github.com/rmpranjeeth/foodapp-mern" target="_blank" class="btn btn-info fw-bold ms-3">Github Code <img src="https://img.icons8.com/material-rounded/24/null/github.png"/></a>
       </div>
     </div>
     <div class="card project-card text-center" style="width: 30rem;">
@@ -207,9 +207,9 @@
           </table>
         </div>
         <a href="
-        https://zendesk-mern.netlify.app" target="_blank" class="btn btn-info fw-bold">Live Demo</a>
+        https://zendesk-mern.netlify.app" target="_blank" class="btn btn-info fw-bold">Live Demo <img src="https://img.icons8.com/material-outlined/24/null/youtube-live.png"/></a>
         <a href="
-        https://github.com/rmpranjeeth/ZenDesk-App-MERN" target="_blank" class="btn btn-info fw-bold ms-3">Github Code</a>
+        https://github.com/rmpranjeeth/ZenDesk-App-MERN" target="_blank" class="btn btn-info fw-bold ms-3">Github Code <img src="https://img.icons8.com/material-rounded/24/null/github.png"/></a>
       </div>
     </div>
     <div class="card project-card text-center" style="width: 30rem;">
@@ -240,9 +240,9 @@
           </table>
         </div>
         <a href="
-        https://quizapp-mernstack.netlify.app" target="_blank" class="btn btn-info fw-bold">Live Demo</a>
+        https://quizapp-mernstack.netlify.app" target="_blank" class="btn btn-info fw-bold">Live Demo <img src="https://img.icons8.com/material-outlined/24/null/youtube-live.png"/></a>
         <a href="
-        https://github.com/rmpranjeeth/QuizApp-MERN" target="_blank" class="btn btn-info fw-bold ms-3">Github Code</a>
+        https://github.com/rmpranjeeth/QuizApp-MERN" target="_blank" class="btn btn-info fw-bold ms-3">Github Code <img src="https://img.icons8.com/material-rounded/24/null/github.png"/></a>
       </div>
     </div>
     <div class="card project-card text-center" style="width: 30rem;">
