--- a/index.html
+++ b/index.html
@@ -213,6 +213,54 @@
       </div>
     </div>
     <div class="card project-card text-center" style="width: 30rem;">
+      <img src="./Images/chatApp.png" class="project-pic card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">Chatting App</h5>
+        <div class="card-text">
+          <table class="table">
+            <tbody>
+              <tr>
+                <th scope="row">Database</th>
+                <td>MongoDB</td>
+              </tr>
+              <tr>
+                <th scope="row">Server-side framework</th>
+                <td>Express.js</td>
+              </tr>
+              <tr>
+                <th scope="row">Client-side framework</th>
+                <td>React</td>
+              </tr>
+              <tr>
+                <th scope="row">Javascript Runtime</th>
+                <td>Node.js</td>
+              </tr>
+              <tr>
+                <th scope="row">Auth</th>
+                <td>JWT</td>
+              </tr>
+              <tr>
+                <th scope="row">Web Socket</th>
+                <td>Socket.IO</td>
+              </tr>
+              <tr>
+                <th scope="row">user ID</th>
+                <td>user1 /</br> user2</td>
+              </tr>
+              <tr>
+                <th scope="row">password</th>
+                <td>User1@123 /</br> User2@123</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <a href="
+        https://chatapp-mernstack.netlify.app" target="_blank" class="btn btn-info fw-bold">Live Demo <img src="https://img.icons8.com/material-outlined/24/null/youtube-live.png"/></a>
+        <a href="
+        https://github.com/rmpranjeeth/chatApp-mern" target="_blank" class="btn btn-info fw-bold ms-3">Github Code <img src="https://img.icons8.com/material-rounded/24/null/github.png"/></a>
+      </div>
+    </div> 
+    <div class="card project-card text-center" style="width: 30rem;">
       <img src="./Images/QuizApp.png" class="project-pic card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title fw-bold">Quiz App</h5>
@@ -244,16 +292,7 @@
         <a href="
         https://github.com/rmpranjeeth/QuizApp-MERN" target="_blank" class="btn btn-info fw-bold ms-3">Github Code <img src="https://img.icons8.com/material-rounded/24/null/github.png"/></a>
       </div>
-    </div>
-    <div class="card project-card text-center" style="width: 30rem;">
-      <img src="./Images/Rest countries & Weather using API.png" class="project-pic card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title fw-bold">Weather info for Rest countries using API</h5>
-        <p class="card-text">In this project i used fetch method to get weather data from API as well as for Rest Countries info</p>
-        <a href="
-        https://stoic-snyder-ac6218.netlify.app" target="_blank" class="btn btn-info fw-bold">Check it out</a>
-      </div>
-    </div>        
+    </div>       
   </div>
 </section>
 
